pom configuration